# picard-plugin-title_cleaner_ost

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  restart-picard.sh
remove_releasetitle_ost_indicator/: README.md  __init__.py
shelves/: README.md  __init__.py  actions.py  constants.py  manager.py  options.py  processors.py  script_functions.py  shelves_config.ui  shelves_config_ui.py  ui_shelves_config.py  utils.py  validators.py
title-cleaner-ost/: __init__.py  ui_options_remove_releasetitle_ost_indicator.py  ui_options_remove_releasetitle_ost_indicator.ui
title_cleaner_ost/: __init__.py  options_page.py  regex_container.ui  title_cleaner_ost_config.ui  ui_title_cleaner_ost_config.py
typings/picard/: __init__.pyi  config.pyi  log.pyi  metadata.pyi
typings/picard/ui/: __init__.pyi  options.pyi
typings/picard/ui/options/: __init__.pyi
