[project]
name = "picard-plugins-nrth3rnlb"
version = "1.1.0"
description = "Collection of MusicBrainz Picard plugins"
authors = [
    {name = "nrth3rnlb"}
]
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15.0",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shelves*", "remove_releasetitle_ost_indicator*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["shelves/tests", "remove_releasetitle_ost_indicator/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["shelves", "remove_releasetitle_ost_indicator"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/ui_*.py",
    "*_ui.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[tool.mypy]
exclude = [
    "ui_.*\\.py$",
    ".*_ui\\.py$"
]
ignore_missing_imports = true
warn_unused_ignores = false

[tool.ruff]
exclude = [
    "ui_*.py",
    "*_ui.py",
    "__pycache__",
    ".git",
    ".venv",
    "venv"
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long

[tool.pylint.main]
ignore-patterns = ["ui_.*\\.py", ".*_ui\\.py"]